--- a/game.html
+++ b/game.html
@@ -2,8 +2,17 @@
 <html>
 <head>
     <title>Zombie Platformer - PRIA Assignment</title>
+    <link href="css/styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+
+    <div id="canvasContainer">
+        <canvas id="gameCanvas" width="1280" height="720">
+            HTML 5 Canvas is not supported on your browser.
+        </canvas>
+    </div>
+
+    <script src="js/game.js" type="text/javascript"></script>
 
 </body>
 </html>
