--- a/game.html
+++ b/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Zombie Platformer - PRIA Assignment</title>
+    <title>Platformer Game - PRIA Assignment</title>
     <link href="css/styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
