--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
         <canvas id="gameCanvas" width="1280" height="720">
             HTML 5 Canvas is not supported on your browser.
         </canvas>
-        <div id="fpsContainer"><input type="text" id="fpsCounter">fps</div>
+        <div id="fpsContainer"><input type="text" id="fpsMeter">fps</div>
     </div>
 
     <script src="js/game.js" type="text/javascript"></script>
