--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
             HTML 5 Canvas is not supported on your browser.
         </canvas>
         <div id="fpsContainer"><input type="text" id="fpsMeter">fps</div>
+        <textarea id="levelTxt"></textarea>
     </div>
 
     <script src="js/game.js" type="text/javascript"></script>
