--- a/game.html
+++ b/game.html
@@ -13,6 +13,6 @@
         <div id="fpsContainer"><input type="text" value="60" id="timer"> seconds</div>
     </div>
 
-    <script src="js/game.js" type="text/javascript"></script>
+    <script src="js/game.min.js" type="text/javascript"></script>
 </body>
 </html>
